Fix awkward image overlapping on mobile

--- a/style/custom-style.less
+++ b/style/custom-style.less
@@ -44,10 +44,15 @@ a {
   }
 }
 
-.talk-details{
+.talk-details {
 
   border: 1px solid black;
   margin: 8px 8px 8px 8px;
+  padding: 2px 3px;
+
+  p {
+    text-align: justify;
+  }
 
   img {
     float: left;
